# c_qoir_sdl

./: .gitignore  .gitmodules  Makefile  meson.build
qoir-sdl/: meson.build  qoir-sdl.c  qoir-sdl.h
qoir-sdl-test/: meson.build  qoir-sdl-test.c  qoir-sdl-test.h
qoir-sdl-test/assets/: SDL_logo.qoir
